[package]
name = "refute"
version = "1.0.1"
edition = "2021"
description = "Add a refute! macro(Elixir inspired). Essentially assert!(false)."
license = "MIT"
repository = "https://github.com/Vagab/refute"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
